# QuiC

./: LOGIC.md  QuiC.spec  README_GUI.md  __init__.py  __main__.py  compare.py  editable_tree.py  main.py  pyproject.toml  requirements.txt  spida_writer.py
