[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiC"
version = "0.1.0"
description = "QuiC – SPIDA vs Katapult comparison GUI"
readme = "README_GUI.md"
authors = [{name = "Your Team", email = "team@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "ttkbootstrap>=1.10",
    "pandas>=1.3",
    "tkintermapview>=1.26",
    "openpyxl>=3.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.scripts]
quic = "QuiC.main:main"

[tool.setuptools]
packages = ["QuiC"] 